--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="profiles">
         <!-- Profile 1 -->
         <div class="profile-card" onclick="openModal('modal1')">
-            <img src="ma.jpg" alt="Ma. Isabel">
+            <img src="maria.jpg" alt="Ma. Isabel">
             <h3>Aremohanan, Ma. Isabel C.</h3>
         </div>
         <!-- Profile 2 -->
